# boundless

./: .dockerignore  .env  .env-compose  .env.base  .env.base-sepolia  .env.broker-template  .env.eth-sepolia  .env.localnet-template  .env.testnet  .gitattributes  .gitignore  .gitmodules  CONTRIBUTION_PROOF_DELEGATION.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  RELEASE.md  UPGRADE.md  balance_plot.py  broker-template.toml  broker.localnet.toml  broker.toml  collateral_analysis.ipynb  compose.blake3-local.yml  compose.multi-zkvm.yml  compose.yml  context7.json  deployments-check.py  emrahfc  foundry.toml  image-id-check.sh  justfile  license-check.py  lychee.toml  migration-guide-2.0.md  offer.yaml  pricing-overrides.template.json  prover-compose.yml  (+6 more)
bento/: Cargo.toml  README.md  receipt.bincode
bento/crates/api/: Cargo.toml
bento/crates/bento-client/: Cargo.toml  method_name
bento/crates/taskdb/: Cargo.toml
bento/crates/taskdb-redis/: Cargo.toml  README.md  docker-compose.yml  init.sql
bento/crates/tdb/: Cargo.toml
bento/crates/workflow/: Cargo.toml
bento/crates/workflow-agent/: Cargo.toml
bento/crates/workflow-common/: Cargo.toml
bento/crates/workflow-zkvm-sp1/: Cargo.toml
bento/infra/: redis-taskdb-dashboard.json
bento/scripts/: docker-cleanup.sh  run_tests.sh
blake3_groth16/: Cargo.toml  README.md
blake3_groth16/dockerfiles/: rapidsnark.dockerfile
blake3_groth16/scripts/: build-docker.sh  prove.sh
blake3_groth16/src/: lib.rs  prove.rs  receipt.rs  receipt_claim.rs  seal_to_json.rs  verify.rs
blake3_groth16/src/prove/: cuda.rs  docker.rs  witgen.rs
crates/balance-alerts-layer/: Cargo.toml
crates/balance-alerts-layer/src/: lib.rs
crates/boundless-backend/: Cargo.toml
crates/boundless-backend/src/: futures_retry.rs  lib.rs  router.rs  router_policy.rs  types.rs
crates/boundless-cli/: Cargo.toml  build.rs
crates/boundless-cli/examples/: show_logos.rs
crates/boundless-cli/skill/: SKILL.md
crates/boundless-cli/src/: chain.rs  chain_utils.rs  client.rs  config.rs  config.rs.bak  config_ext.rs  config_file.rs  contracts.rs  display.rs  indexer_client.rs  lib.rs  price_oracle_helper.rs
crates/boundless-cli/tests/: forked_integration.rs  integration.rs  povw.rs  prover_balance_collateral.rs  prover_claim_fees.rs  prover_deposit_collateral.rs  prover_register.rs  prover_status.rs  prover_update_config.rs  prover_withdraw_collateral.rs  requestor_balance.rs  requestor_cancel.rs  requestor_deposit.rs  requestor_list_orders.rs  requestor_order_details.rs  requestor_send.rs  requestor_withdraw.rs  rewards_balance_zkc.rs  rewards_staked_balance_zkc.rs  zkc.rs
crates/boundless-market/: Cargo.toml  README.md  build.rs
crates/boundless-market-sdk/: Cargo.toml
crates/boundless-market/examples/: submit_echo.rs
crates/boundless-market/src/: aggregator.rs  backend.rs  backend_provider.rs  backend_registry.rs  balance_alerts_layer.rs  blake3_groth16.rs  claim_digest.rs  client.rs  deployments.rs  digest.rs  dynamic_gas_filler.rs  filler.rs  indexer_client.rs  indexer_types.rs  input.rs  journal.rs  lib.rs  nonce_layer.rs  order_pricer.rs  order_stream_client.rs  price_oracle.rs  price_provider.rs  program.rs  selector.rs  storage.rs  telemetry.rs  test_helpers.rs  util.rs
crates/boundless-market/test-utils/: Cargo.toml
crates/boundless-market/tests/: e2e.rs  s3.rs
crates/boundless-signer/: Cargo.toml  REMOTE_SIGNER.md
crates/boundless-signer/src/: backend.rs  bridge.rs  config.rs  http_remote.rs  lib.rs  local.rs  traits.rs  types.rs
crates/boundless-signer/tests/: compat_test.rs  http_remote_test.rs
crates/broker/: Cargo.toml
crates/broker-stress/: Cargo.toml
crates/broker-stress/src/: main.rs  toxiproxy.rs
crates/broker/migrations/: 1_broker.sql  2_enable_wal.sql  2_fulfill_and_locked.sql  3_drop_skipped_orders.sql  3_indexing_orders.sql  3_skipped_cleanup.sql
crates/broker/src/: aggregator.rs  args.rs  backend.rs  backend_service.rs  balance_alert_layer.rs  block_history.rs  block_processor.rs  broker.rs  chain_monitor.rs  chain_monitor_v2.rs  channels.rs  config.rs  db.rs  errors.rs  futures_retry.rs  l1_monitor.rs  lib.rs  market_monitor.rs  offchain_market_monitor.rs  order_committer.rs  order_evaluator.rs  order_locker.rs  order_monitor.rs  order_picker.rs  order_pricer.rs  order_types.rs  price_oracle.rs  prioritization.rs  provers.rs  proving.rs  reaper.rs  requestor_list_refresher.rs  requestor_monitor.rs  rpc_retry_policy.rs  rpcmetrics.rs  sequential_fallback.rs  service_runner.rs  storage.rs  submitter.rs  task.rs  (+4 more)
crates/broker/testdata/: base_43414930_block.json  base_43414930_receipts.json  eth_24666352_block.json  eth_24666352_receipts.json
crates/distributor/: Cargo.toml
crates/distributor/src/: main.rs
crates/executor/: Cargo.toml  README.md
crates/executor/src/: api.rs  backend.rs  lib.rs  main.rs  session.rs  storage.rs
crates/fulfillment-counter/: Cargo.toml  build.rs
crates/fulfillment-counter/guest/: Cargo.toml
crates/fulfillment-counter/src/: lib.rs  main.rs
crates/indexer/: Cargo.toml  README.md
crates/indexer/migrations-manual/: create_readonly_user.sql
crates/indexer/src/: db.rs  (+4 more)
crates/multi-zkvm-prover/: Cargo.toml
crates/multi-zkvm-types/: Cargo.toml
crates/order-generator/: Cargo.toml  README.md
crates/prover/: Cargo.toml
crates/r0-backend/: Cargo.toml
crates/requestor-lists/: Cargo.toml  README.md  requestor-list.v1.schema.json
crates/rewards/: Cargo.toml  README.md
crates/risc0-backend/: Cargo.toml
crates/test-utils/: Cargo.toml
crates/zkc/: Cargo.toml  build.rs
documentation/doc-test/: Cargo.toml  build.rs
examples/echo-unpinned/: .gitignore  Cargo.toml
examples/smart-contract-requestor/: Cargo.toml  README.md  foundry.toml  remappings.txt
shrink_bitvm2/: Cargo.toml  README.md
shrink_bitvm2/dockerfiles/: rapidsnark.dockerfile
shrink_bitvm2/src/: lib.rs  prove.rs  receipt_claim.rs  verify.rs
xtask/: Cargo.toml
xtask/src/: bootstrap_blake3_groth16.rs  main.rs  setup_blake3_groth16.rs  upload_blake3_groth16_artifacts.rs
(+1937 files in other folders)
