[workspace]
resolver = "2"
members = [
    "blake3_groth16",
    "crates/assessor",
    "crates/bench",
    "crates/boundless-cli",
    "crates/boundless-market",
    "crates/broker",
    "crates/broker-stress",
    "crates/distributor",
    "crates/guest/assessor",
    "crates/guest/util",
    "crates/indexer",
    "crates/lambdas/indexer-api",
    "crates/lambdas/indexer-monitor",
    "crates/order-generator",
    "crates/order-stream",
    "crates/povw",
    "crates/requestor-lists",
    "crates/rewards",
    "crates/slasher",
    "crates/test-utils",
    "crates/zkc",
]

[workspace.package]
version = "1.3.0"
edition = "2021"
homepage = "https://boundless.network/"
repository = "https://github.com/boundless-xyz/boundless/"

[workspace.dependencies]

alloy = { version = "1.0", default-features = false }
alloy-chains = "0.2.0"
alloy-node-bindings = { version = "1.0" }
alloy-primitives = { version = "1.0" }
alloy-sol-types = { version = "1.0", features = ["json"] }
anyhow = { version = "1.0" }

async-stream = "0.3"
async-trait = "0.1"
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.34" # used for minio for max compatibility
axum = "0.8"
axum-extra = { version = "0.10" }
bincode = "1.3"
blake3_groth16 = { path = "blake3_groth16", default-features = false }
bonsai-sdk = { git = "https://github.com/risc0/risc0", branch = "flaub/shrink-bitvm2", features = [
    "non_blocking",
    "shrink_bitvm2",
] }
borsh = "1.5"
boundless-assessor = { version = "1.3.0", path = "crates/assessor" }
boundless-cli = { path = "crates/boundless-cli" }
boundless-market = { version = "1.3.0", path = "crates/boundless-market" }
boundless-povw = { path = "crates/povw" }
boundless-rewards = { path = "crates/rewards" }
boundless-test-utils = { path = "crates/test-utils" }
boundless-zkc = { path = "crates/zkc" }
broker = { path = "crates/broker" }
bs58 = "0.5"
bytemuck = "1.16"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
distributor = { path = "crates/distributor" }
futures-util = "0.3"
guest-assessor = { path = "crates/guest/assessor" }
guest-set-builder = { git = "https://github.com/risc0/risc0-ethereum", tag = "aggregation-v0.8.1" }
guest-util = { path = "crates/guest/util" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
httpmock = "0.7"
order-stream = { path = "crates/order-stream" }
postcard = { version = "1.0" }
rand = { version = "0.9" }
requestor-lists = { path = "crates/requestor-lists" }
reqwest = "0.12"
risc0-aggregation = { version = "0.9.0" }
risc0-binfmt = { version = "3.0.3", default-features = false }
risc0-build = { version = "3.0.4", features = ["docker", "unstable"] }
risc0-build-ethereum = { version = "3.0.1" }
risc0-circuit-recursion = { version = "4.0.3" }
risc0-ethereum-contracts = { version = "3.0.1" }
risc0-groth16 = { version = "3.0.3", default-features = false }
risc0-groth16-sys = { version = "0.1.0" }
risc0-povw = { version = "0.4.1", default-features = false }
risc0-zkp = { version = "3.0.3" }
risc0-zkvm = { version = "3.0.4", default-features = false }
rmp-serde = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = { version = "0.10" }
sqlx = { version = "0.8", default-features = false }
tempfile = "3.10"
test-log = { version = "0.2", features = ["trace"] }
thiserror = "2.0"
tokio = { version = "1" }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-util = { version = "0.7" }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = { version = "0.2" }
url = "2.5"
utoipa = "5.2"
uuid = { version = "1.7", features = ["v4"] }

# Apply some optimizations on dev profile, to speed up tests.
[profile.dev]
opt-level = 1

[profile.release]
debug = 1
lto = true
# [profile.release]
# lto = "fat"
# codegen-units = 1
