[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/bento-client",
    "crates/sample-guest/common",
    "crates/sample-guest/methods",
    "crates/taskdb",
    "crates/workflow",
    "crates/workflow-common",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://boundless.network/"
repository = "https://github.com/boundless-xyz/boundless"

[workspace.dependencies]
anyhow = "1.0.98"
aws-sdk-s3 = "1.34" # used for minio for max compatibility
bento-client = { path = "crates/bento-client" }
bincode = "1.3.3"
bonsai-sdk = { git = "https://github.com/boundless-xyz/risc0.git", rev = "ca25189da495cafdea67b8f00bc435d1ff41a58b", features = [
    "non_blocking",
    "blake3",
] }
bytemuck = "1.16"
clap = { version = "4.5", features = ["derive", "env"] }
deadpool-redis = "0.15"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp"] }

# risc0-binfmt = { version = "3.0.2" }
# risc0-build = { version = "3.0.3" }
# risc0-zkvm = { version = "3.0.3", default-features = false }

# risc0-binfmt = { path = "/home/etu/risc0/risc0/binfmt" }
# risc0-build = { path = "/home/etu/risc0/risc0/build" }
# risc0-zkvm = { path = "/home/etu/risc0/risc0/zkvm", default-feature = false, features = ["blake3"] }

risc0-binfmt = { git = "https://github.com/boundless-xyz/risc0.git", rev = "ca25189da495cafdea67b8f00bc435d1ff41a58b" }
risc0-build = { git = "https://github.com/boundless-xyz/risc0.git", rev = "ca25189da495cafdea67b8f00bc435d1ff41a58b" }
risc0-zkvm = { git = "https://github.com/boundless-xyz/risc0.git", rev = "ca25189da495cafdea67b8f00bc435d1ff41a58b", default-feature = false, features = [
    "blake3",
] }

sample-guest-common = { path = "crates/sample-guest/common" }
sample-guest-methods = { path = "crates/sample-guest/methods" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# shrink_bitvm2 = { git = "https://github.com/ec2/shrink_bitvm2.git", rev = "e3933355820e468a217387dd11fa0a1a0fc309ed", default-features = false }
sqlx = { version = "0.8", default-features = false }
taskdb = { path = "crates/taskdb" }
tempfile = "3.10"
thiserror = "1.0"
tokio = "1.44"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
workflow = { path = "crates/workflow" }
workflow-common = { path = "crates/workflow-common" }

[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
