[package]
name = "blake3_groth16"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
default = ["std"]
std = [
    "ark-bn254/std",
    "ark-groth16/std",
    "ark-serialize/std",
    "hex/std",
    "num-bigint/std",
    "num-traits/std",
    "risc0-groth16/std",
    "serde/std",
]
prove = [
    "std",
    "risc0-zkvm/prove",
    "dep:circom-witnesscalc",
    "dep:num-bigint",
    "dep:num-traits",
    "dep:tempfile",
    "dep:wtns-file",
]
cuda = ["prove", "risc0-zkvm/cuda", "risc0-groth16/cuda", "dep:risc0-groth16-sys"]

[dependencies]
anyhow = { workspace = true }
ark-bn254 = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
borsh = { workspace = true, features = ["derive"] }
boundless-market = { workspace = true, features = ["blake3-groth16"] }
risc0-groth16 = { workspace = true, default-features = false }
risc0-zkvm = { workspace = true, default-features = false }
serde = { workspace = true, features = ["alloc", "derive"] }
serde_json = { workspace = true }

# Host dependencies
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
bincode = { workspace = true }
bonsai-sdk = { workspace = true, features = ["non_blocking", "shrink_bitvm2"] }
circom-witnesscalc = { version = "0.2.1", optional = true }
hex = { workspace = true }
num-bigint = { version = "0.4", features = ["std"], optional = true }
num-traits = { version = "0.2.19", optional = true }
risc0-groth16-sys = { workspace = true, optional = true }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["bonsai"] }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
wtns-file = { version = "0.1.5", optional = true }

[target.'cfg(not(target_os = "zkvm"))'.dev-dependencies]
guest-util = { workspace = true }
test-log = { workspace = true }
