[package]
name = "shrink_bitvm2"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["prove"]
prove = ["risc0-zkvm/prove"]
cuda = ["prove", "risc0-zkvm/cuda", "risc0-groth16/cuda", "dep:risc0-groth16-sys"]

[dependencies]
anyhow.workspace = true
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = { version = "0.5.0" }
ark-serialize = "0.5.0"
blake3 = { version = "1.5.0" }

circom-witnesscalc = { version = "0.2.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0", default-features = false }
hex.workspace = true
num-bigint = { version = "0.4.5", features = ["std"] }
num-traits = "0.2.19"
risc0-binfmt = { version = "3.0.2", default-features = false }
risc0-circuit-recursion = { workspace = true, default-features = false }
risc0-groth16 = { workspace = true }
risc0-groth16-sys = { workspace = true, optional = true }
risc0-zkp = { workspace = true, default-features = false }
risc0-zkvm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tracing.workspace = true
wtns-file = { version = "0.1.5" }
