[package]
name = "xtask"
version = "0.0.1"
edition = "2021"
homepage = "https://boundless.network/"
repository = "https://github.com/boundless-xyz/boundless/"

[workspace]

[features]
default = []
cuda = ["dep:risc0-groth16-sys", "blake3_groth16/cuda"]

[dependencies]
anyhow = "1.0"
astral-tokio-tar = { version = "0.5" }
async-compression = { version = "0.4", default-features = false, features = ["lzma", "tokio"] }
aws-config = "1.0"
aws-credential-types = "1.0"
aws-sdk-s3 = { version = "1.0" }
blake3_groth16 = { path = "../blake3_groth16", features = ["prove"] }
boundless-market = { path = "../crates/boundless-market" }
clap = { version = "4.5", features = ["derive", "env"] }
guest-util = { path = "../crates/guest/util" }
hex = { version = "0.4" }
liblzma = { version = "0.4", features = ["static"] }
memmap2 = { version = "0.9", optional = true }
num_cpus = "1.0"
regex = "1"
risc0-circuit-recursion = { version = "4.0.3" }
risc0-groth16-sys = { version = "0.1.0", optional = true, features = ["cuda", "setup"] }
risc0-zkvm = { version = "3.0.4", features = ["prove"] }
rlimit = "0.10.2"
tokio = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xshell = "0.2"
