[package]
name = "boundless-cli"
description = "CLI for the Boundless, the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "boundless"

[[bin]]
name = "boundless-ffi"

[features]
# Enables the prove feature on risc0-zkvm to build the prover directly into this CLI.
prove = ["risc0-zkvm/prove", "blake3_groth16/prove"]
# Enables the cuda feature on risc0-zkvm to build the prover directly into this CLI, with CUDA support.
cuda = ["prove", "risc0-zkvm/cuda", "blake3_groth16/cuda"]

[dependencies]
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
atomicwrites = "0.4.4"
bincode = { workspace = true }
blake3_groth16 = { workspace = true }
bonsai-sdk = { workspace = true }
boundless-assessor = { workspace = true }
boundless-market = { workspace = true }
boundless-povw = { workspace = true }
boundless-zkc = { workspace = true }
broker = { workspace = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = "2.1"
dirs = "5.0"
futures = { version = "0.3" }
hex = { workspace = true }
inquire = "0.7"
libc = "0.2.159"
num_cpus = "1.16"
num_enum = "0.7.4"
rand = { workspace = true }
reqwest = { workspace = true }
risc0-aggregation = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-povw = { workspace = true, features = ["prover"] }
risc0-zkvm = { workspace = true, features = ["std", "default"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shadow-rs = { version = "1.1", default-features = false }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = "0.8"
toml_edit = "0.22"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[build-dependencies]
shadow-rs = "1.1"

[dev-dependencies]
alloy-node-bindings = { workspace = true }
assert_cmd = "=2.0"
assert_fs = "1.1"
boundless-market = { workspace = true }
boundless-test-utils = { workspace = true, features = ["povw", "zkc"] }
order-stream = { workspace = true }
predicates = "3.1"
rand = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
tempfile = { workspace = true }
tokio-test = "0.4"
tracing-test = { workspace = true }
