[package]
name = "boundless-market-sdk"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
anyhow = { workspace = true }
boundless-market = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
guest-util = { workspace = true, optional = true }
hex = { workspace = true }
order-stream = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
risc0-ethereum-contracts = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, features = ["std", "client"], optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[[bin]]
name = "cli"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:dotenvy", "dep:guest-util", "dep:risc0-ethereum-contracts", "dep:risc0-zkvm", "dep:serde_json", "dep:serde_yaml", "tokio/rt-multi-thread"]
default = ["cli"]
