[package]
name = "boundless-market"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }

# Host dependencies
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
aggregation-set = { workspace = true }
alloy = { workspace = true, features = ["network", "node-bindings", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
async-trait = "0.1"
aws-sdk-s3 = "1.34"
guest-assessor = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
boundless-market = { path = ".", features = ["test-utils"] }
guest-util = { workspace = true }
tracing-test = "0.2"

[features]
test-utils = []
