[package]
name = "boundless-market"
description = "SDK for the Boundless Market, part of the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
blake3-groth16 = [
    "dep:blake3",
    "dep:risc0-circuit-recursion"
]
default = []
test-utils = []

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# Host dependencies
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
alloy = { workspace = true, features = [
    "network",
    "node-bindings",
    "rpc-types",
    "providers",
    "transports",
    "sol-types",
    "contract",
    "signers",
    "signer-local",
    "rpc-client",
] }

async-stream = { workspace = true }
async-trait = "0.1"
aws-sdk-s3 = "1.34"
blake3 = { version = "1.5.0", optional = true }
borsh = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = "6"
derive_builder = "0.20.2"
futures = "0.3"
futures-util = { workspace = true }
hex = { workspace = true }
httpmock = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
risc0-aggregation = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-circuit-recursion = { workspace = true, optional = true }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
rmp-serde = { workspace = true }
serde_json = { workspace = true }
siwe = { version = "0.6", features = ["serde"] }
tempfile = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tower = "0.5"
tracing = { workspace = true }
utoipa = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
boundless-test-utils = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }
