[package]
name = "boundless-market"
description = "SDK for the Boundless Market, part of the universal ZK protocol"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
blake3-groth16 = ["dep:blake3", "dep:risc0-circuit-recursion"]
default = ["s3"]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
gcs = [
    "dep:google-cloud-storage",
    "dep:google-cloud-auth",
    "dep:google-cloud-gax",
    "dep:rustls",
]
prover_utils = ["dep:bincode"]
test-utils = ["dep:httpmock", "dep:hyper-util", "dep:s3s", "dep:s3s-fs"]

[dependencies]
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# Host dependencies
[target.'cfg(not(target_os = "zkvm"))'.dependencies]
alloy = { workspace = true, features = [
    "network",
    "node-bindings",
    "rpc-types",
    "providers",
    "transports",
    "sol-types",
    "contract",
    "signers",
    "signer-local",
    "rpc-client",
] }
async-stream = { workspace = true }
async-trait = { workspace = true }
auto_impl = "1.3"
aws-config = { workspace = true, optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { workspace = true, optional = true }
blake3 = { version = "1.5.0", optional = true }
borsh = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true }
bytes = "1.11"
chrono = { workspace = true }
clap = { workspace = true }
dashmap = "6"
derive_builder = "0.20.2"
futures = "0.3"
futures-util = { workspace = true }
google-cloud-auth = { workspace = true, optional = true }
google-cloud-gax = { workspace = true, optional = true }
google-cloud-storage = { workspace = true, optional = true }
hex = { workspace = true }
httpmock = { workspace = true, optional = true }
hyper-util = { version = "0.1", optional = true, features = ["server-auto", "tokio"] }
moka = { version = "0.12.12", features = ["future"] }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
risc0-aggregation = { workspace = true }
risc0-binfmt = { workspace = true }
risc0-circuit-recursion = { workspace = true, optional = true }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
rmp-serde = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"], optional = true }
s3s = { version = "0.11", optional = true }
s3s-fs = { version = "0.11", optional = true }
serde_json = { workspace = true }
siwe = { version = "0.6", features = ["serde"] }
tempfile = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
toml = "0.8"
tower = "0.5"
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
boundless-test-utils = { workspace = true }
guest-util = { workspace = true }
temp-env = { version = "0.3.6", features = ["async_closure"] }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[[example]]
name = "submit_echo"
required-features = []
