[package]
name = "boundless-signer"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false
description = "Pluggable transaction signing backend for Boundless broker and CLI"

[features]
default = []
http-remote = ["dep:reqwest"]

[dependencies]
alloy = { workspace = true, features = [
    "network",
    "providers",
    "transports",
    "signers",
    "signer-local",
    "rpc",
    "rpc-types",
    "consensus",
] }
anyhow = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["node-bindings"] }
httpmock = { workspace = true }
tokio = { workspace = true, features = ["full"] }
