[package]
name = "broker"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[features]
test-utils = ["dep:boundless-test-utils"]
prove = ["blake3_groth16/prove"]
cuda = ["blake3_groth16/cuda"]
# Enable this feature to run tests that require r0vm proving (slow without RISC0_DEV_MODE=1)
test-r0vm = []

[dependencies]
alloy = { workspace = true, features = [
    "network",
    "providers",
    "transports",
    "sol-types",
    "contract",
    "signers",
    "signer-local",
    "rpc",
    "rpc-types",
    "json-rpc",
] }
alloy-chains = "0.2.0"
anyhow = { workspace = true }
async-channel = "2.3"
async-stream = "0.3"
async-trait = { workspace = true }
bincode = { workspace = true }
blake3_groth16 = { workspace = true }
bonsai-sdk = { workspace = true }
boundless-assessor = { workspace = true }
boundless-market = { workspace = true, features = ["prover_utils"] }
boundless-test-utils = { workspace = true, optional = true }
bytemuck = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = "0.3"
futures-util = { workspace = true }
hex = { workspace = true }
moka = { version = "0.12", features = ["future"] }
notify = "6.1"
rand = { workspace = true }
requestor-lists = { path = "../requestor-lists" }
reqwest = { workspace = true }
risc0-aggregation = { workspace = true }
risc0-ethereum-contracts = { workspace = true, features = ["unstable"] }
risc0-zkvm = { workspace = true, features = ["std", "client"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true, features = ["sqlite", "postgres", "runtime-tokio", "json", "migrate", "macros"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "signal"] }
tokio-util = { workspace = true }
toml = "0.8"
tower = "0.5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["node-bindings"] }
boundless-market = { workspace = true, features = ["test-utils"] }
broker = { path = ".", features = ["test-utils"] }
elsa = "1.11"
hex = { workspace = true }
httpmock = "0.7"
proptest = "1.4"
proptest-derive = "0.5"
rand = { workspace = true }
risc0-groth16 = { workspace = true, features = ["prove"] }
risc0-zkvm = { workspace = true, features = ["std"] }
test-log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-test = { workspace = true }
