[package]
name = "boundless-distributor"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false

[package.metadata.release]
release = false

[features]

[dependencies]
alloy = { workspace = true, features = ["network", "node-bindings", "rpc-types", "providers", "transports", "sol-types", "contract", "signers", "signer-local"] }
anyhow = { workspace = true }
boundless-market = { workspace = true }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "fmt", "env-filter"] }
url = { workspace = true }

[dev-dependencies]
boundless-test-utils = { workspace = true }
tracing-test = { workspace = true }
